Update HTML file

--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@ li{margin:8px 0}
 <div class="container">
 <div class="card">
 <div class="toolbar">
-<div class="title">Prompt Library<span class="sr-only"></span><small>Executive &amp; Strategic Communications</small></div>
+<div class="title">Prompt Library<span class="sr-only"></span><small>AURA </small></div>
 <div class="actions">
 <button id="themeBtn" aria-label="Toggle theme"><span id="themeLabel">Auto</span> theme</button>
 </div>
 </div>
 <div class="content">
-<p>Prompt Library for Executive and Strategic Communications</p>
-<p class="intro">This library organizes strategic prompts into categories to support executive reporting, internal communications, media monitoring, and stakeholder engagement. Each category includes examples and can be expanded based on use case.</p>
+<p>Prompt Library for AURA ecosystem</p>
+<p class="intro">This library organizes AURA prompts into categories to support reporting, internal communications, mmonitoring, and stakeholder engagement. Each category includes examples and can be expanded based on use case.</p>
 <details>
-<summary>A. Executive Summary Prompts</summary>
+<summary>A. MBR Insights Iris</summary>
 <div class="details-body">
-<p>For VP/CVP-level audiences, focusing on strategic synthesis:</p>
+<p>For VP/CVP-level audiences, focusing on MBR summaries:</p>
 <ul>
-<li><span class="prompt-text" data-copy>Summarize coverage report for a VP audience with three key insights and one strategic implication on [launch].</span></li>
+<li><span class="prompt-text" data-copy>Provide an executive summary that organizes top 5 Highlights insights and top 5 lowlights for separated by MCA, Per Seat, and Marketplace.</span></li>
 <li><span class="prompt-text" data-copy>Draft a CVP-level briefing that highlights overall sentiment tone, risks, opportunities, and next steps on [launch].</span></li>
 <li><span class="prompt-text" data-copy>Draft an email for CVPs summarizing the impact of [initiative] with a call to action.</span></li>
-<li><span class="prompt-text" data-copy>Pull an executive summary of this week’s global media coverage on [subject].</span></li>
-<li><span class="prompt-text" data-copy>Give me a full coverage report on [topic] across media, analysts, social, and partners.</span></li>
-<li><span class="prompt-text" data-copy>What’s the overall sentiment trend for [launch] this quarter?</span></li>
+<li><span class="prompt-text" data-copy>Pull an executive summary of this week’s insights keyword [subject].</span></li>
+<li><span class="prompt-text" data-copy>Give me a full report on [topic] across MCA per-seat.</span></li>
+<li><span class="prompt-text" data-copy>What’s the overall sentiment trend for [keyword] this month?</span></li>
 </ul>
 </div>
 </details>
