Update HTML file

--- a/index.html
+++ b/index.html
@@ -53,33 +53,33 @@ li{margin:8px 0}
 <p>Prompt Library for AURA ecosystem</p>
 <p class="intro">This library organizes AURA prompts into categories to support reporting, internal communications, mmonitoring, and stakeholder engagement. Each category includes examples and can be expanded based on use case.</p>
 <details>
-<summary>A. MBR Insights Iris</summary>
+<summary>A. MBR Insights (Iris)</summary>
 <div class="details-body">
 <p>For VP/CVP-level audiences, focusing on MBR summaries:</p>
 <ul>
-<li><span class="prompt-text" data-copy>Provide an executive summary that organizes top 5 Highlights insights and top 5 lowlights for separated by MCA, Per Seat, and Marketplace.</span></li>
-<li><span class="prompt-text" data-copy>Draft a CVP-level briefing that highlights overall sentiment tone, risks, opportunities, and next steps on [launch].</span></li>
-<li><span class="prompt-text" data-copy>Draft an email for CVPs summarizing the impact of [initiative] with a call to action.</span></li>
-<li><span class="prompt-text" data-copy>Pull an executive summary of this week’s insights keyword [subject].</span></li>
-<li><span class="prompt-text" data-copy>Give me a full report on [topic] across MCA per-seat.</span></li>
-<li><span class="prompt-text" data-copy>What’s the overall sentiment trend for [keyword] this month?</span></li>
+<li><span class="prompt-text" data-copy>Ask agent Iris to provide an executive summary that organizes top 5 Highlights insights and top 5 lowlights for separated by MCA, Per Seat, and Marketplace.</span></li>
+<li><span class="prompt-text" data-copy>Ask agent Iris to draft a CVP-level briefing that highlights overall sentiment tone, risks, opportunities, and next steps on [launch].</span></li>
+<li><span class="prompt-text" data-copy>Ask agent Iris to draft an email for CVPs summarizing the impact of [initiative] with a call to action.</span></li>
+<li><span class="prompt-text" data-copy>As agent Iris to pull an executive summary of this week’s insights keyword [subject].</span></li>
+<li><span class="prompt-text" data-copy>Ask agent Iris to give me a full report on [topic] across MCA per-seat.</span></li>
+<li><span class="prompt-text" data-copy>Ask agent Iris What’s the overall sentiment trend for [keyword] this month?</span></li>
 </ul>
 </div>
 </details>
 <details>
-<summary>B. Internal Comms &amp; Enablement Prompts</summary>
+<summary>B. Marketplace Prompts (Frida)</summary>
 <div class="details-body">
-<p>For internal updates, stakeholder alignment, and planning:</p>
+<p>For Marketplace topics related with public, private, and customer support:</p>
 <ul>
-<li><span class="prompt-text" data-copy>Draft an email for CVPs summarizing the impact of [initiative] with a call to action.</span></li>
-<li><span class="prompt-text" data-copy>Summarize the top 3 insights from the latest analyst reports on [launch].</span></li>
+<li><span class="prompt-text" data-copy>Ask Frida to Draft an email for CVPs summarizing the impact of [initiative] with a call to action.</span></li>
+<li><span class="prompt-text" data-copy>Ask Frida to Summarize the top Benefits for Marketplace, particularly [keyword].</span></li>
 <li><span class="prompt-text" data-copy>Highlight analyst concerns or praise around [announcement] from the last 30 days.</span></li>
 <li><span class="prompt-text" data-copy>Compare analyst tone on [subject] across Gartner, Forrester, and IDC.</span></li>
 </ul>
 </div>
 </details>
 <details>
-<summary>C. Analyst Research Prompts</summary>
+<summary>C. Commerce Prompts (Gibbs)</summary>
 <div class="details-body">
 <p>Focused on third-party insights and competitive intelligence:</p>
 <ul>
@@ -90,34 +90,34 @@ li{margin:8px 0}
 </div>
 </details>
 <details>
-<summary>D. Global Media Coverage Prompts</summary>
+<summary>D. Incident Management Prompts (Jasper)</summary>
 <div class="details-body">
 <p>For tracking press mentions and sentiment across regions:</p>
 <ul>
-<li><span class="prompt-text" data-copy>List all global articles mentioning [subject] this week, broken down by country and coverage type.</span></li>
-<li><span class="prompt-text" data-copy>Summarize international press coverage on [launch] and highlight major vs. minor mentions.</span></li>
-<li><span class="prompt-text" data-copy>What’s the media sentiment around [announcement] in Americas, EMEA and APAC?</span></li>
-<li><span class="prompt-text" data-copy>What’s the media sentiment around [announcement] in EMEA [or Americas, or APAC]?</span></li>
+<li><span class="prompt-text" data-copy>Ask Jasper to List all IcMs mentioning [subject] this week, broken down by Engineering team.</span></li>
+<li><span class="prompt-text" data-copy>Ask Jasper to give me Weekly ICM report.</span></li>
+<li><span class="prompt-text" data-copy>Ask Jasper to provide with my ICM incidents </span></li>
+<li><span class="prompt-text" data-copy>What’s the theme for the last [] days?</span></li>
 </ul>
 </div>
 </details>
 <details>
-<summary>E. Social Media Prompts</summary>
+<summary>E. Other Prompts</summary>
 <div class="details-body">
-<p>To monitor real-time reactions and influencer engagement:</p>
+<p>To monitor engagement on general topics:</p>
 <ul>
-<li><span class="prompt-text" data-copy>Summarize social media sentiment around [announcement] from LinkedIn and X.</span></li>
-<li><span class="prompt-text" data-copy>What are the top trending hashtags and reactions to [launch]?</span></li>
-<li><span class="prompt-text" data-copy>Pull influencer commentary and engagement metrics for [subject].</span></li>
+<li><span class="prompt-text" data-copy>Summarize  around [announcement] from LinkedIn and X.</span></li>
+<li><span class="prompt-text" data-copy>What are the top  [launch]?</span></li>
+<li><span class="prompt-text" data-copy>Pull information about [subject].</span></li>
 </ul>
 </div>
 </details>
 <details>
-<summary>F. Partner Sentiment Prompts</summary>
+<summary>F. Other Prompts</summary>
 <div class="details-body">
-<p>To capture ecosystem feedback and regional partner dynamics:</p>
+<p>To capture  partner dynamics:</p>
 <ul>
-<li><span class="prompt-text" data-copy>Highlight positive and negative partner sentiment by region.</span></li>
+<li><span class="prompt-text" data-copy>Highlight advantages of [ ] region.</span></li>
 </ul>
 </div>
 </details>
